# Event-cam

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md  calibration.md  checkerboard.html  circle_grid.html  installation.md  multi_camera.md  troubleshooting.md  tuning.md  usage.md
docs/sdk/: README.md  access.md  extending.md  flicker_test.html  install.md  led_marker.c  led_tracking.md  more_pipelines.md  optical_flow.md  pipelines.md  tracking.md
evk4_bringup/: CMakeLists.txt  package.xml
evk4_bringup/config/: evk4_params.yaml  evk4_params_recommended.yaml
evk4_bringup/config/biases/: README.md
evk4_bringup/config/calibration/: event_camera.yaml
evk4_bringup/launch/: evk4.launch.py  replay.launch.py
evk4_bringup/scripts/: camera_info_publisher.py
evk4_bringup/src/: camera_info_component.cpp
evk4_calibration/: package.xml  setup.cfg  setup.py
evk4_calibration/evk4_calibration/: calibrate.py
evk4_calibration/launch/: calibrate.launch.py
evk4_diagnostics/: package.xml  setup.cfg  setup.py
evk4_diagnostics/evk4_diagnostics/: camera_monitor.py
evk4_driver/: CMakeLists.txt  package.xml
evk4_driver/include/evk4_driver/: evk4_driver.hpp
evk4_driver/launch/: evk4_proto.launch.py
evk4_driver/src/: driver_node.cpp  evk4_driver.cpp
evk4_examples/: package.xml  setup.cfg  setup.py
evk4_examples/evk4_examples/: event_rate_node.py
evk4_examples_cpp/: CMakeLists.txt  package.xml
evk4_examples_cpp/launch/: event_rate_composed.launch.py
evk4_examples_cpp/src/: event_rate.cpp
evk4_sdk_advanced/: CMakeLists.txt  package.xml
evk4_sdk_advanced/include/evk4_sdk_advanced/: event_vision_node.hpp  ml_vision_node.hpp
evk4_sdk_advanced/launch/: optical_flow.launch.py  pipeline.launch.py  tracking.launch.py
evk4_sdk_advanced/src/: counting_node.cpp  dense_flow_node.cpp  detection_node.cpp  edgelet_node.cpp  flow_inference_node.cpp  frequency_node.cpp  gesture_node.cpp  jet_node.cpp  led_node.cpp  optical_flow_node.cpp  psm_node.cpp  spatter_node.cpp  tracking_node.cpp  undistortion_node.cpp
setup/: evk4_doctor.sh  install_deps.sh  install_sdk.sh
setup/patches/: event_camera_renderer-backlog-cap.patch
setup/udev_rules/: 88-cyusb.rules
