<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evk4_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files and configuration for the Prophesee EVK4 event camera,
    using our OpenEB-based evk4_driver. Publishes raw event_camera_msgs and
    an optional rendered image topic.
  </description>
  <maintainer email="modesuka@gmail.com">Modestas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>evk4_driver</exec_depend>
  <exec_depend>event_camera_renderer</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- camera_info component (calibration) -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <!-- rectify:=true loads image_proc::RectifyNode into the container -->
  <exec_depend>image_proc</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
