<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evk4_calibration</name>
  <version>0.1.0</version>
  <description>
    Guided intrinsic calibration for the Prophesee EVK4. A window shows the
    live rendered image, detects a checkerboard, tracks coverage, auto-captures
    views, runs OpenCV calibration, and writes a camera_info YAML for
    evk4_bringup's calibration_url.
  </description>
  <maintainer email="modesuka@gmail.com">Modestas</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- calibrate.launch.py -->
  <exec_depend>evk4_bringup</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
