<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evk4_diagnostics</name>
  <version>0.1.0</version>
  <description>
    Stream-health watchdog for the Prophesee EVK4: publishes
    diagnostic_msgs on /diagnostics, distinguishing a streaming camera,
    a silent-but-alive camera (static scene), and a dead driver.
  </description>
  <maintainer email="modesuka@gmail.com">Modestas</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>event_camera_msgs</exec_depend>
  <exec_depend>event_camera_py</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
