<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evk4_examples</name>
  <version>0.1.0</version>
  <description>
    Example Python subscribers for the Prophesee EVK4 event camera topics
    published by evk4_bringup, decoding event_camera_msgs with
    event_camera_py.
  </description>
  <maintainer email="modesuka@gmail.com">Modestas</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>event_camera_msgs</exec_depend>
  <exec_depend>event_camera_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
